node-main/deps/v8/test/message/fail/modules-duplicate-export5.mjs
// Copyright 2018 the V8 project authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

export let foo = 42;
export * as foo from "./doesnt-even-matter.mjs";
